--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "http.proxy": "http://10.38.248.20:3128/",
     "https.proxy": "http://10.38.248.20:3128/",
-    "http.proxyStrictSSL": false
+    "http.proxyStrictSSL": false,
+    "files.autoSave": "onWindowChange"
 }
